			Java Electric change log

************************* Version 8.01b: *********************************



************************* Version 8.01a: Released 7/22/04 ************************

IMP/MAN: (7/22/04, JKG) Numerical display now always formats to show postfix. Units Preferences
     disabled, as they no longer make sense. Use TextUtils.parseUserInput to read in numbers.

FIX: (7/22/04, JKG) Many many small fixes in copy/moving/arraying/editing/displaying.

IMP/MAN: (7/21/04, JKG) Wiring Tool revamped, all cases checked

IMP: (7/22/04, GVG) New interface for geometrical operation. Error thrown if Java3D is not found. Some improvements in ERC.

IMP/MAN: (7/20/04, RK) Add Regular Expressions to FindText Dialog. Allow user selection of objects to be searched. Report finds and changes in Messages Window. Persist dialog settings.  Allow temporary arc and node inst names to be searched.

BUG: (7/20/04, RK) Fix button (it did nothing). Exports weren't being searched.

BUG: (7/19/04, GVG) XSize and YSize in Mult-Object Properties window not correctly calculated. Offset was missing.
FIX: Offset added if objects are instance of NodeInst.

IMP: (7/18/04, JKG) Implement clipping for arcs and text in PixelDrawing. Speeds up redraw when zoomed in.

BUG: (7/16/04, GVG) PolyQTree doesn't properly merge polygons that are touching each other.
FIX: Extra code for those cases.

BUG: (7/18/04, JKG) New cell version command: old version had bad cell group

IMP: (7/16/04, GVG) Better thickness and distances for layers in 3D: technology MoCMOS

************************* Version 8.00: Released  *************************

BUG: (7/16/04, RK) Series merging needs to count both Pins and Parts

IMP: (7/15/04, RK) Added Size Checking. It doesn't work yet so disable it in the options dialog.
     Embellished the NCC Options Dialog. Added some documentation to the NCC page.
     Removed Hierarchical from NCC menu because it hasn't been adequately tested.
